<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerRecList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E8EAF6"
    android:orientation="vertical"
    android:padding="0dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1A237E" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEF3F4">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            app:cardBackgroundColor="#E8EAF6"
            app:cardCornerRadius="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E8EAF6">

                <Button
                    android:id="@+id/button_rec_favorite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="2dp"
                    android:background="#FFCDD2"
                    android:backgroundTint="#DA0E6D"
                    android:drawableLeft="@drawable/button_favorite"
                    android:drawablePadding="2dp"
                    android:padding="10dp"
                    android:text="@string/fav_button"
                    app:iconTint="#FCE4EC"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_comment"
                    app:strokeColor="#1A237E" />

                <TextView
                    android:id="@+id/tv_rec_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="6dp"
                    android:text="TextView"
                    android:textColor="#0D47A1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView7" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_imageItem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="#E8EAF6"
                    app:cardBackgroundColor="#EEF3F4"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rec_title">

                    <ImageView
                        android:id="@+id/iv_rec_item_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#E8EAF6"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/content_24dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="#51FF9800"
                    app:cardBackgroundColor="#F1F3F3"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="1dp"
                    app:cardMaxElevation="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#C5CAE9"
                        android:padding="2dp">

                        <ImageView
                            android:id="@+id/iv_rec_flag"
                            android:layout_width="48dp"
                            android:layout_height="36dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/content_24dp" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="4dp"
                            android:text="@string/at_booth"
                            app:layout_constraintEnd_toStartOf="@+id/iv_rec_flag"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_rec_place"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:layout_marginBottom="8dp"
                            android:text="TextView"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/iv_rec_flag" />

                        <TextView
                            android:id="@+id/tv_creator_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginBottom="8dp"
                            android:text="TextView"
                            android:textColor="#043612"
                            android:textStyle="bold|italic"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/cardView8" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/textShared"
                            app:layout_constraintStart_toEndOf="@+id/cardView8"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            app:cardCornerRadius="24dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/iv_creator_photo"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/content_24dp" />
                        </androidx.cardview.widget.CardView>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="#F1F3F3"
                    android:padding="8dp"
                    app:cardBackgroundColor="#E8EAF6"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp"
                    app:contentPadding="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_imageItem">

                    <TextView
                        android:id="@+id/tv_rec_item_comment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="#E8EAF6"
                        android:inputType="textMultiLine|textImeMultiLine"
                        android:text="TextView" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#0D47A1" />
</LinearLayout>